--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.event.repository.name | toLower }}
-  OWNER: ${{ github.repository_owner | toLower }}
+  IMAGE_NAME: ${{ github.event.repository.name.toLowerCase() }}
+  OWNER: ${{ github.repository_owner.toLowerCase() }}
 
 jobs:
   build-and-push-image:
