--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,8 +71,10 @@ jobs:
       
           # List image versions and filter by branch name using GitHub CLI
           echo "Fetching image versions..."
+          # API_RESPONSE=$(gh api -H "Accept: application/vnd.github.v3+json" \
+          #   "/orgs/${{ env.OWNER }}/packages/container/${{ env.IMAGE_NAME }}/versions" --paginate)
           API_RESPONSE=$(gh api -H "Accept: application/vnd.github.v3+json" \
-            "/orgs/${{ env.OWNER }}/packages/container/${{ env.IMAGE_NAME }}/versions" --paginate)
+            "/user/packages/container/${{ env.IMAGE_NAME }}/versions" --paginate)
             
           echo "Raw API response: $API_RESPONSE"
           
@@ -97,7 +99,8 @@ jobs:
             # Loop through the IDs and delete them using GitHub CLI
             for VERSION_ID in $VERSIONS_TO_DELETE; do
               echo "Deleting version ID: $VERSION_ID"
-              gh api -X DELETE "/orgs/${{ env.OWNER }}/packages/container/${{ env.IMAGE_NAME }}/versions/$VERSION_ID"
+              # gh api -X DELETE "/orgs/${{ env.OWNER }}/packages/container/${{ env.IMAGE_NAME }}/versions/$VERSION_ID"
+              gh api -X DELETE "/user/packages/container/${{ env.IMAGE_NAME }}/versions/$VERSION_ID"
             done
           fi
 
